# aviutl2-ripple-trim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_and_copy.bat  release.md
.github/workflows/: build.yml  release.yml
scripts/: build-package.ps1  build.ps1
src/: RippleTrim.cpp
